--- a/주차장xml.ipynb
+++ b/주차장xml.ipynb
@@ -9,8 +9,8 @@
     "import requests\n",
     "import pprint\n",
     "\n",
-    "encoding='Fj4HAvL9R%2F6NZn6VKVn5%2BQSPJ63ROZNMlDZ8C0YR5omT22c9kLcC4oSN8JdTyQuJp8mRICErcEzYr2IUWkTtYQ%3D%3D'\n",
-    "deconding='Fj4HAvL9R/6NZn6VKVn5+QSPJ63ROZNMlDZ8C0YR5omT22c9kLcC4oSN8JdTyQuJp8mRICErcEzYr2IUWkTtYQ=='\n",
+    "encoding='key'\n",
+    "deconding='key'\n",
     "\n",
     "url = 'http://openapi.jeonju.go.kr/rest/parking/getParkingList'\n",
     "params ={'serviceKey' : encoding,\n",
